--- a/src/app/modules/analytics/analytics.component.html
+++ b/src/app/modules/analytics/analytics.component.html
@@ -1,104 +1,154 @@
-<div class="flex flex-col flex-auto min-w-0">
+<div class="w-full h-full p-6 sm:p-10">
   <!-- Main -->
-  <div class="flex-auto p-6 sm:p-10">
-    <div
-      class="h-400 min-h-400 max-h-400 p-5 border-2 border-dashed border-gray-300 rounded-2xl"
+  <div
+    class="flex flex-col items-center w-full p-5 border-2 border-dashed border-gray-300 rounded-2xl"
+  >
+    <div class="w-full text-center text-4xl">Pick CSV</div>
+    <!-- Test CSV button + dropdown -->
+    <form
+      *ngIf="testForm"
+      class="flex flex-wrap justify-center w-full mt-5"
+      [formGroup]="testForm"
     >
-      <div class="text-center text-4xl">Pick CSV</div>
-      <div class="flex flex-wrap items-center justify-center mt-5">
-        <!-- Added CSV -->
-        <div
-          class="flex flex-col w-full h-full rounded-sm border-solid border-2 border-gray-600 shadow-lg"
+      <button
+        (click)="loadTestCsv()"
+        class="w-full sm:w-1/3 md:w-1/4 h-12 py-2 px-4 bg-indigo-500 hover:bg-indigo-700 text-white font-bold rounded"
+      >
+        Load test CSV
+      </button>
+      <mat-form-field class="w-full sm:w-2/3 md:w-2/4">
+        <mat-select [formControlName]="'selectedCompany'">
+          <div *ngFor="let op of testOptions">
+            <mat-option [disabled]="op.disabled === true" [value]="op.value">
+              {{ op.option }}
+            </mat-option>
+          </div>
+        </mat-select>
+        <mat-error
+          *ngIf="selectedCompany.touched && selectedCompany.value === 'none'"
         >
-          <!-- Actions -->
-          <div class="flex flex-wrap justify-center items-center w-full">
-            <div
-              (click)="removeCsv(); fileInput.value = null"
-              class="bg-gray-700 h-3/12 w-1/2 md:w-1/3 cursor-pointer hover:bg-gray-500 transition ease-out"
-            >
-              <!-- Delete -->
-              <div class="flex justify-center items-center py-1">
-                <mat-icon
-                  class="text-white"
-                  [svgIcon]="'heroicons_outline:trash'"
-                ></mat-icon>
-              </div>
-            </div>
-            <!-- Pick -->
-            <div
-              (click)="fileInput.click()"
-              class="bg-gray-700 h-3/12 w-1/2 md:w-1/3 cursor-pointer hover:bg-gray-500 transition ease-out"
-            >
-              <input
-                id="inputCsv"
-                hidden
-                (change)="onChange($event)"
-                #fileInput
-                multiple
-                placeholder="Pick CSV"
-                type="file"
-              />
-              <div class="flex justify-center items-center py-1">
-                <span class="material-icons text-white">attachment</span>
-              </div>
-            </div>
-            <!-- Send CSV -->
-            <div
-              (click)="sendCsv()"
-              class="bg-gray-800 h-3/12 w-full md:w-1/3 cursor-pointer hover:bg-gray-900 transition ease-out"
-            >
-              <div class="flex justify-center items-center py-1">
-                <span class="material-icons text-white">play_arrow</span>
-              </div>
+          Please select a company stock data
+        </mat-error>
+      </mat-form-field>
+    </form>
+    <!-- Wrapper -->
+    <div class="flex flex-wrap items-center justify-center w-full mt-5">
+      <!-- Added CSV -->
+      <div
+        class="flex flex-col w-full h-full rounded-sm border-solid border-2 border-gray-600 shadow-lg"
+      >
+        <!-- Actions -->
+        <div class="flex flex-wrap justify-center items-center w-full">
+          <div
+            (click)="removeCsv(); fileInput.value = null"
+            class="bg-gray-700 h-3/12 w-1/2 md:w-1/3 cursor-pointer hover:bg-gray-500 transition ease-out"
+          >
+            <!-- Delete -->
+            <div class="flex justify-center items-center py-1">
+              <mat-icon
+                class="text-white"
+                [svgIcon]="'heroicons_outline:trash'"
+              ></mat-icon>
             </div>
           </div>
-          <!-- Table -->
+          <!-- Pick -->
           <div
-            (click)="!sampleData ? fileInput.click() : null"
-            [ngClass]="{ 'cursor-pointer': !sampleData }"
-            class="flex flex-row justify-center items-center max-h-full h-full w-full hover:bg-slate-200 transition-all rounded-sm"
+            (click)="fileInput.click()"
+            class="bg-gray-700 h-3/12 w-1/2 md:w-1/3 cursor-pointer hover:bg-gray-500 transition ease-out"
           >
-            <ng-template #noData>
-              <div class="flex flex-wrap justify-center items-center h-60">
-                <mat-icon
-                  class="icon-size-20"
-                  [svgIcon]="'heroicons_outline:plus'"
-                ></mat-icon>
-              </div>
-            </ng-template>
-            <table
-              *ngIf="
-                displayedColumns?.length > 0 && dataSource?.length > 0;
-                else noData
-              "
-              mat-table
-              [dataSource]="dataSource"
-              class="flex-grow rounded-t-xl"
-            >
-              <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
-
-              <!-- Columns -->
-              <ng-container
-                class="overflow-ellipsis bg-amber-300"
-                *ngFor="let column of displayedColumns"
-                [matColumnDef]="column"
-              >
-                <th mat-header-cell *matHeaderCellDef>
-                  {{ column | titlecase }}
-                </th>
-                <td mat-cell *matCellDef="let element">
-                  {{ element[column.toLowerCase()] }}
-                </td>
-              </ng-container>
-
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-            </table>
+            <input
+              id="inputCsv"
+              hidden
+              (change)="onChange($event)"
+              #fileInput
+              multiple
+              placeholder="Pick CSV"
+              type="file"
+            />
+            <div class="flex justify-center items-center py-1">
+              <span class="material-icons text-white">attachment</span>
+            </div>
+          </div>
+          <!-- Send CSV -->
+          <div
+            (click)="sendCsv()"
+            class="bg-gray-800 h-3/12 w-full md:w-1/3 cursor-pointer hover:bg-gray-900 transition ease-out"
+          >
+            <div class="flex justify-center items-center py-1">
+              <span class="material-icons text-white">play_arrow</span>
+            </div>
           </div>
         </div>
-        <div class="flex flex-wrap justify-center items-center w-full">
-          
+        <!-- Table -->
+        <div
+          (click)="!sampleData ? fileInput.click() : null"
+          [ngClass]="{ 'cursor-pointer': !sampleData }"
+          class="flex flex-row justify-center items-center max-h-full h-full w-full hover:bg-slate-200 transition-all rounded-sm"
+        >
+          <ng-template #noData>
+            <div class="flex flex-wrap justify-center items-center h-60">
+              <mat-icon
+                class="icon-size-20"
+                [svgIcon]="'heroicons_outline:plus'"
+              ></mat-icon>
+            </div>
+          </ng-template>
+          <table
+            *ngIf="
+              displayedColumns?.length > 0 && dataSource?.length > 0;
+              else noData
+            "
+            mat-table
+            [dataSource]="dataSource"
+            class="flex-grow rounded-t-xl"
+          >
+            <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+
+            <!-- Columns -->
+            <ng-container
+              class="overflow-ellipsis bg-amber-300"
+              *ngFor="let column of displayedColumns"
+              [matColumnDef]="column"
+            >
+              <th mat-header-cell *matHeaderCellDef>
+                {{ column | titlecase }}
+              </th>
+              <td mat-cell *matCellDef="let element">
+                {{ element[column.toLowerCase()] }}
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
+        </div>
+      </div>
+      <div
+        *ngIf="predictedData"
+        class="flex flex-wrap justify-center items-center w-full mt-5"
+      >
+        <div id="chart-demo">
+          <dx-chart
+            title="Actual vs Predicted"
+            palette="Harmony Light"
+            [dataSource]="displayedPredictions"
+          >
+            <dxi-series valueField="close" name="Actual"></dxi-series>
+            <dxi-series valueField="predicted" name="Predicted"></dxi-series>
+            <dxo-common-series-settings
+              #commonSeries
+              argumentField="date"
+              type="splinearea"
+            ></dxo-common-series-settings>
+            <dxo-margin [bottom]="20"></dxo-margin>
+            <dxo-argument-axis
+              [valueMarginsEnabled]="false"
+            ></dxo-argument-axis>
+            <dxo-export [enabled]="true"></dxo-export>
+            <dxo-legend verticalAlignment="bottom" horizontalAlignment="center">
+            </dxo-legend>
+          </dx-chart>
         </div>
       </div>
     </div>
